# lv_port_stm32f746_disco

./: .cproject  .cproject_org  .gitattributes  .gitignore  .gitmodules  .project  .project_org  CMakeLists.txt  LinkerScript.ld  README.md  STM32F746G-DISCO.xml  lv_conf.h  lv_demo_conf.h  lv_ex_conf.h  lv_port_stm32f746_disco Debug.launch  stm32f746_discovery_no_os Debug.cfg  stm32f746_discovery_no_os Run.cfg  stm32f746_discovery_no_os.launch
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: stm32_port.yml
Debug/: .gitignore
HAL_Driver/Inc/: stm32f7xx_hal_conf.h
HAL_Driver/Src/: stm32f7xx_hal.c  stm32f7xx_hal_flash.c  stm32f7xx_hal_mmc.c  stm32f7xx_hal_timebase_rtc_alarm_template.c  stm32f7xx_hal_timebase_rtc_wakeup_template.c  stm32f7xx_hal_timebase_tim_template.c
Release/: Makefile  flash-stlink2-1-STM32F7.sh  gdb-init.gdb  program-stlink-STM32F7.sh  stm32f7.cfg
Utilities/STM32746G-Discovery/: Release_Notes.html  STM32746G-Discovery_BSP_User_Manual.chm  stm32746g_discovery.c  stm32746g_discovery_audio.c  stm32746g_discovery_audio.h  stm32746g_discovery_camera.c  stm32746g_discovery_camera.h  stm32746g_discovery_eeprom.c  stm32746g_discovery_eeprom.h  stm32746g_discovery_lcd.c  stm32746g_discovery_lcd.h  stm32746g_discovery_qspi.c  stm32746g_discovery_qspi.h  stm32746g_discovery_sdram.h  stm32746g_discovery_ts.h
gdb-scripts/: gdb-init-remote.gdb  gdb-init.gdb
hal_stm_lvgl/tft/: tft.c  tft.h
hal_stm_lvgl/touchpad/: touchpad.c
ide/iar/: startup_stm32f746xx.s  stm32f746_disco_lvgl.ewd  stm32f746_disco_lvgl.ewp  stm32f746_disco_lvgl.ewt  stm32f746_disco_lvgl.eww  stm32f746xx_flash.icf
inc/: adc.h  crc.h  dcmi.h  dma2d.h  eth.h  fmc.h  i2c.h  ltdc.h  main.h  quadspi.h  rtc.h  sai.h  sdmmc.h  spdifrx.h  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h  usart.h  usb_otg.h
src/: adc.c  crc.c  dcmi.c  dma2d.c  eth.c  fmc.c  gpio.c  i2c.c  ltdc.c  main.c  quadspi.c  rtc.c  sai.c  sdmmc.c  spdifrx.c  spi.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  system_stm32f7xx.c  tim.c  usart.c  usb_otg.c
startup/: startup_stm32f746xx.s  sysmem.c
